# smart-home

./: .gitignore  LICENSE.md  README.md
app/: capacitor.config.json
app/www/: index.html
app/www/assets/css/: style.css
app/www/assets/js/: main.js
broker/: README.md  mosquitto.conf
broker/config/auth/: passwd.txt
broker/data/: mosquitto.db
broker/smart_home_scripts/: mqtt_to_db.py
documents/: MQTT_COMMANDS.md  README.md
esp/: README.md  sdkconfig  sdkconfig.old
esp/components/: partitions.csv
esp/components/application/mode_manager/: CMakeLists.txt  mode_manager.c
esp/components/application/mqtt_callback/: README.md  mqtt_callback.c
esp/components/communication/: README.md
esp/components/utilities/: README.md
esp/esp/: CMakeLists.txt  README.md
esp/esp/main/: CMakeLists.txt
esp/esp_demo/: README.md  sdkconfig
esp/esp_demo/main/: main.c
esp/esp_no_tls/: README.md  sdkconfig  sdkconfig.old
esp/esp_no_tls/docs/: WIFI_PROVISIONING_FLOWCHART.md
esp/esp_no_tls/main/: README.md
esp/esp_no_tls_demo/: README.md  sdkconfig
esp/main/: Kconfig.projbuild
esp_demo/: sdkconfig.old
esp_demo/components/application/: README.md
esp_demo/components/application/task_init/: CMakeLists.txt
esp_demo/components/hardware/: README.md
esp_demo/components/sensor/: README.md
esp_demo/main/: README.md
web/: README.md  auth.js  index.html  login.html  style.css
web/assets/js/: README.md  firebase-config.js  main.js
web/web/: README.md
web/web_no_tls/: .firebaserc  README.md
web/web_no_tls/assets/: README.md
(+256 files in other folders)
